--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
       "_/*": ["src/*"],
       "_public/*": ["public/*"],
       "_main/*": ["src/main/*"],
+      "_components/*": ["src/components/*"],
       "_preload/*": ["src/preload/*"],
       "_renderer/*": ["src/renderer/*"],
       "_types/*": ["src/types/*"],
